package GameComponents.Board;
import GameComponents.Player;
import Controllers.GuiController;
import gui_fields.GUI_Player;

public class StartSquare extends Square{


    public StartSquare(String startSquare) {
        super(startSquare);

    }

   public void landOn(Player currentPlayer, Player[] players) {
        msg.printText("passStart", "na");

    }

}
